--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             <div class="score">
                 <h1>Jogador</h1>
                 <div class="life-bar">
-                    <div class="life"></div>
+                    <div class="life" :class="playerLifeColor" :style="playerLifeBar"></div>
                 </div>
                 <div>{{playerLife}}%</div>
             </div>
             <div class="score">
                 <h1>Monstro</h1>
                 <div class="life-bar">
-                    <div class="life"></div>
+                    <div class="life" :class="monsterLifeColor" :style="monsterLifeBar"></div>
                 </div>
                 <div>{{monsterLife}}%</div>
             </div>
